# template-python

./: .gitignore  .ls-lint.yml  flake.nix  lefthook.yml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  dependency_review.yml  gha_lint.yml
